# j4fpascal-compiler

./: .gitignore  Cargo.toml  README.md  TODO  grammar.g4
.github/workflows/: rust.yml
crates/backend/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: ast.rs  codegen.rs  diagnostic.rs  error.rs  lexer.rs  lib.rs  parser.rs  sema.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  visitor.rs
crates/jpc/: Cargo.toml  README.md
crates/jpc/src/: hir.rs  ir.rs  main.rs  riscv.rs
crates/jpc/src/alpha/: codegen.rs
crates/jpc/src/hir/: basic_block.rs  codegen.rs  interpreter.rs  ssa.rs
crates/jpc/src/riscv/: asm.rs  codegen.rs  decode.rs  instruction.rs  target.rs
crates/jpci/: Cargo.toml
crates/jpci/src/: callable.rs  interpreter.rs  main.rs  type_system.rs
crates/pmachine/: Cargo.toml  README.md
crates/pmachine/src/: main.rs
crates/regex-cli/: Cargo.toml
crates/regex-cli/src/: main.rs
crates/regex/src/: determinization.rs  dfs.rs  errors.rs  lib.rs  minimization.rs  thompson.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
docs/: dom.md  hir.md  index.md  parsing.md  references.md  ssa.md
examples/: add.pas  array.pas  array2.pas  case.pas  fact.pas  helloworld.pas  if.pas  linkedlist2.pas  set.pas  subscripts.pas
