[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
name = "salusa-secundus"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[workspace.dependencies]
frontend = { path = "crates/frontend" }
regex = { path = "crates/regex" }
thiserror = { version = "2.0.11" }
lazy_static = { version = "1.5.0" }

[profile.release]
lto = true
