[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
name = "salusa-secundus"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[workspace.dependencies]
core = { path = "crates/core" }
lazy_static = { version = "1.5.0" }
regex = { path = "crates/regex" }
rpds = { version = "1.1.0" }
thiserror = { version = "2.0.11" }
clap = { version = "4.5.31", features = ["derive"] }

[profile.release]
lto = true